--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^3.1.2",
     "rollup-plugin-typescript2": "^0.27.0",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "26.1.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.7.2"
   },
