--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript-plugin-styled-components": "^1.4.4"
   }
 }
